# opencv-ncnn-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
build_cross_aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
ncnn_lib/aarch64/include/ncnn/: platform.h
ncnn_lib/aarch64/lib/cmake/ncnn/: ncnn.cmake
ncnn_lib/aarch64/lib/pkgconfig/: ncnn.pc
ncnn_lib/lib/cmake/ncnn/: ncnnConfig.cmake
ncnn_lib/rv1106/include/ncnn/: platform.h
ncnn_lib/rv1106/lib/cmake/ncnn/: ncnn.cmake
ncnn_lib/rv1106/lib/pkgconfig/: ncnn.pc
ncnn_lib/x86_64/include/ncnn/: platform.h
ncnn_lib/x86_64/lib/pkgconfig/: ncnn.pc
opencv-4.10.0/: toolchain-aarch64.cmake
opencv-mobile-4.10.0-luckfox-pico/: CMakeLists.txt  main.cpp
opencv_lib/aarch64/lib/: libopencv_calib3d.so.410  libopencv_features2d.so.410  libopencv_highgui.so.4.10.0  libopencv_imgcodecs.so.410  libopencv_ml.so.410  libopencv_objdetect.so.4.10.0  libopencv_stitching.so.410  libopencv_video.so.4.10.0  libopencv_videoio.so.4.10.0
opencv_lib/x86_64/lib/: libopencv_calib3d.so.4.10.0  libopencv_flann.so.4.10.0  libopencv_imgcodecs.so.4.10.0  libopencv_photo.so.4.10.0  libopencv_video.so.4.10.0
scripts/: run_test.sh
toolchains/: aarch64-linux-gnu.toolchain.cmake  arm-rockchip830-linux-uclibcgnueabihf.toolchain.cmake
